Update TalkingArch; other minor edits

--- a/LinuxAccessibilityResources.html
+++ b/LinuxAccessibilityResources.html
@@ -55,11 +55,11 @@
         (<abbr>IBM</abbr>, 2002).
         Also available on <a href="http://www.faqs.org/docs/Linux-HOWTO/Accessibility-Dev-HOWTO.html">faqs.org</a>.
       </li>
-      <li><span lang="fr">Samuel Thibault</span>: 
+      <li><span lang="fr">Samuel Thibault</span>:
         <a href="http://brl.thefreecat.org/wiki/LUG">Accessibility Tips: <abbr title="Linux User Group">LUG</abbr></a>
         for Linux User Groups who want to welcome people with disabilities.
       </li>
-      <li><span lang="fr">Samuel Thibault</span>: 
+      <li><span lang="fr">Samuel Thibault</span>:
         <a href="http://brl.thefreecat.org/wiki/Installer">Accessibility Tips: Installer</a>: 
         about accessible installers.
       </li>
@@ -171,9 +171,9 @@
         is an easy-to-use, talking desktop system with optional support for braille, 
         which can be used entirely without vision oriented output devices.</q>
       </li>
-      <li>
-        <a href="https://wiki.archlinux.org/index.php/TalkingArch">TalkingArch</a>: 
-        TalkingArch is a bootable <abbr>CD</abbr> or <abbr>USB</abbr> image optimised for blind users. 
+      <li><a href="https://talkingarch.tk/">TalkingArch</a>:
+        <q>a respin of the Arch Linux live iso modified to include speech and braille output for blind and visually impaired users</q>.
+        <br />TalkingArch is a bootable <abbr>CD</abbr> or <abbr>USB</abbr> image optimised for blind users. 
         The system stars speaking at boot time.
         TalkingArch is not an official release of the Arch Linux project.
       </li>
@@ -213,7 +213,7 @@
         <a href="http://www.linux-speakup.org/distros.html">distributions</a>,
         but it seems that there have been no updates since 2010. 
       </li>
-      <li><a href="http://luwrain.org/">The accessible environment Luwrain</a>:<!--luwrain.org: now has Russian owner? @@ask http://twitter.com/luwrain-->
+      <li><a href="http://luwrain.org/?lang=en">The accessible environment Luwrain</a>:<!--luwrain.org: now has Russian owner? @@ask http://twitter.com/luwrain-->
         <q>Luwrain is a set of software components on Java for accessible user interface construction.</q>
         The 
         <a href="https://github.com/luwrain/luwrain">source code</a> (on GitHub) 
