--- a/GUIAccessibilityResources.html
+++ b/GUIAccessibilityResources.html
@@ -45,6 +45,10 @@
     <h3>Java Swing</h3>
     <ul>
       <li>
+        <a href="https://docs.oracle.com/javase/tutorial/uiswing/misc/access.html">How to Support Assistive Technologies</a>
+        in Oracle's Java Tutorials.
+      </li>
+      <li>
         <a href="http://docs.oracle.com/javase/8/docs/api/javax/accessibility/package-summary.html">Package javax.accessibility</a>
         in the Java Platform <abbr>SE</abbr> 8 documentation.
       </li>
