--- a/LinuxAccessibilityResources.html
+++ b/LinuxAccessibilityResources.html
@@ -63,6 +63,15 @@
         <a href="http://brl.thefreecat.org/wiki/Installer">Accessibility Tips: Installer</a>: 
         about accessible installers.
       </li>
+      <li><span lang="fr">Samuel Thibault</span>:
+        <a href="https://www.youtube.com/watch?v=Sfq6i4TivE4">Thanks for maintaining a desktop environment. But is it accessible?</a>
+        (45 minutes): video recording of a presentation at the
+        <a href="http://debconf15.debconf.org/index.xhtml">Debian Conference</a> in August 2015.
+        See the <a href="http://debconf15.debconf.org/videostream.xhtml">video archive of the Debian conference</a>
+        and the
+        <a href="http://meetings-archive.debian.net/pub/debian-meetings/2015/debconf15/Thanks_for_maintaining_a_desktop_environment_But_is_it_accessible.webm">direct link to Samual Thibault's talk (WebM format)</a>.
+        <!--@@add subtitles; see https://wiki.debconf.org/wiki/Videoteam/Subtitles/videos_debconf15 -->
+      </li>
       <li>Spencer Hunley: 
         <a href="http://opensource.com/life/15/4/6-reasons-people-disabilities-should-use-linux">6 reasons people with disabilities should use Linux</a>,
         Opensource.com, 20 April 2015.
