The MATE Desktop

--- a/LinuxAccessibilityResources.html
+++ b/LinuxAccessibilityResources.html
@@ -153,6 +153,11 @@
         <a href="https://userbase.kde.org/Applications/Accessibility">Accessibility</a>:
         guide to accessibility features and tools in KDE.
       </li>
+      <li>The
+        <a href="http://mate-desktop.org/">MATE Desktop Environment</a>
+        has (or had) a good reputation for accessibility,
+        but the website has no documentation about its accessibilty features.
+      </li>
     </ul>
 
     <h2>Specialised Linux Distributions</h2>
