See also TalkingArch blog and wiki

--- a/LinuxAccessibilityResources.html
+++ b/LinuxAccessibilityResources.html
@@ -190,6 +190,10 @@
         <br />TalkingArch is a bootable <abbr>CD</abbr> or <abbr>USB</abbr> image optimised for blind users. 
         The system stars speaking at boot time.
         TalkingArch is not an official release of the Arch Linux project.
+        See also
+        <a href="https://blog.talkingarch.tk/">The TalkingArch Blog</a>
+        and the
+        <a href="https://wiki.archlinux.org/index.php/TalkingArch">TalkingArch wiki page</a>.
       </li>
       <li><a href="https://lescahiersdudebutant.fr/handylinux/" hreflang="fr">HandyLinux</a><!--http://handylinux.org/index-en.html redirects to newer site 08.01.2018 -->
         was a Debian-based French distribution aimed at beginners, elderly people 
