--- a/assistivetechnology.html
+++ b/assistivetechnology.html
@@ -130,16 +130,34 @@
         <a href="http://dyslexiahelp.umich.edu/tools/apps">Apps for Dyslexia and Learning Disabilities</a>.
       </li>
       <!-- @@check https://duckduckgo.com/?q=%22open+source%22+software+dyslexia&ia=web -->
-      <!-- 
+      <!--
       <li>
         <a href=""></a>
       </li>
       -->
     </ul>
 
-    <!-- screen readers
+    <h2>Screen Readers</h2>
+    <ul>
+      <li>
+        <a href="https://wiki.gnome.org/Projects/Orca">Orca</a>:
+        free and open-source screen reader for built into the GNOME desktop environment.
+        See also
+        <a href="https://help.gnome.org/users/orca/stable/index.html.en">Orca Screen Reader</a>
+        on the GNOME Help site and
+        <a href="https://docs.oracle.com/cd/E23824_01/html/E24675/ats-2.html">Orca Screen Reader and Magnifier</a>
+        in Oracle's Solaris 11 Accessibility Guide for the GNOME Desktop.
+      </li>
+      <li>
+        <a href="https://www.nvaccess.org/"><abbr>NVDA</abbr></a>:
+        free and open-source screen reader for Microsoft Windows.
+        See also the
+        <a href="https://www.nvaccess.org/files/nvda/documentation/userGuide.html"><abbr>NVDA</abbr> User Guide</a>.
+      </li>
+    <!--
       * Oracle: Orca Screen Reader and Magnifier [Oracle Solaris 11 Accessibility Guide for the GNOME Desktop]: https://docs.oracle.com/cd/E23824_01/html/E24675/ats-2.html 
     -->
+    </ul>
 
 
     <h2>Motor Impairments</h2>
