--- a/GameAccessibilityResources.html
+++ b/GameAccessibilityResources.html
@@ -264,7 +264,7 @@
       </li>
       <li>
         <a href="https://docs.microsoft.com/en-us/windows/uwp/gaming/accessibility-for-games">Making games accessible</a>,
-        <i class="website">Microsoft Dev Center</i>, 11.09.2017.
+        <i class="website">Microsoft Dev Center</i>, 11.09.2017; updated 25.10.2018.
       </li>
     </ul>
 
