Microsoft: Make your Outlook email accessible

--- a/contentaccessibility.html
+++ b/contentaccessibility.html
@@ -560,6 +560,10 @@
 
     <h2>Other Links</h2>
     <ul>
+      <li>
+        <a href="https://support.office.com/en-us/article/make-your-outlook-email-accessible-71ce71f4-7b15-4b7a-a2e3-cf91721bbacb">Make your Outlook email accessible</a>,
+        <i class="website">Microsoft: Office Support</i> (no date).
+      </li>
       <li>Aron, Jacob:
         <a href="http://www.sciencedirect.com/science/article/pii/S0262407912618636">Crowdsourcing can serve up the subtitles to your life</a>,
         <i class="magazine">New Scientist</i>, Volume 215, Issue 2874, 21 July 2012, Pages 21.
