How to prove to client that blind users can also use his e-commerce website?

--- a/webaccessibilitytechniques.html
+++ b/webaccessibilitytechniques.html
@@ -1146,6 +1146,10 @@
         <a href="https://ux.stackexchange.com/q/4425/91974">Do we still need text scaling links on websites?</a>
         A question posted on User Experience Stack Exchange in October 2009.
       </li>
+      <li>
+        <a href="https://ux.stackexchange.com/q/20704/91974">How to prove to client that blind users can also use his e-commerce website?</a>
+        A question posted on User Experience Stack Exchange in April 2012.
+      </li>
       <!--@@sign language:-->
       <li>
         <a href="http://www.bik-fuer-alle.de/deutsche-gebaerdensprache-im-internet-umsetzen.html" hreflang="de" lang="de">Deutsche Gebärdensprache im Internet umsetzen</a>,
