CSS content and screen readers (JAWs)

--- a/webaccessibilitytechniques.html
+++ b/webaccessibilitytechniques.html
@@ -1161,6 +1161,10 @@
         <i class="blog">Karl Groves</i>, 26.08.2013.
         <br />Note that screen readers started adding support for <abbr>CSS</abbr> generated content in the years after this blog post was written.
       </li>
+      <li>
+        <a href="https://stackoverflow.com/q/37925765/6002174"><abbr>CSS</abbr> content and screen readers (JAWs)</a>,
+        a question posted on Stack Overflow in June 2016.
+      </li>
     </ul>
 
   </main>
