Northup: Screen Readers and CSS

--- a/webaccessibilitytechniques.html
+++ b/webaccessibilitytechniques.html
@@ -1165,6 +1165,10 @@
         <a href="https://stackoverflow.com/q/37925765/6002174"><abbr>CSS</abbr> content and screen readers (JAWs)</a>,
         a question posted on Stack Overflow in June 2016.
       </li>
+      <li>Northup, John:
+        <a href="https://webaim.org/blog/screen-readers-and-css/">Screen Readers and <abbr>CSS</abbr>: Are We Going Out of Style (and into Content)?</a>,
+        <i class="blog">Web<abbr>AIM</abbr> blog</i>, 28.08.2017.
+      </li>
     </ul>
 
   </main>
