Frick: Make Your Website More Accessible ...

--- a/webaccessibilitytechniques.html
+++ b/webaccessibilitytechniques.html
@@ -134,6 +134,10 @@
         <a href="https://www.userzoom.com/user-experience-research/10-web-accessibility-myths-debunked/">10 Website Accessibility Myths Debunked</a>,
         <i class="blog">UserZoom blog</i>, 04.04.2018.
       </li>
+      <li>Frick, Tim:
+        <a href="https://bthechange.com/make-your-website-more-accessible-to-people-with-disabilities-132f59d19292">Make Your Website More Accessible to People with Disabilities</a>,
+        <i class="blog">B the Change</i>, 25.07.2018 (eight-minute read).
+      </li>
       <li>
         <a href="https://www.accessibility-developer-guide.com/">Accessibility Developer Guide</a>:
         an initiative of the Swiss foundation Access for All. See also the
