--- a/404.html
+++ b/404.html
@@ -11,6 +11,7 @@ permalink: /404.html
   <link rel="alternate stylesheet" type="text/css" media="screen" href="http://cstrobbe.github.io/AccessibilityResources/css/verdemoderna.css" title="alternative stylesheet (green)" />
   <link rel="alternate stylesheet" type="text/css" media="screen" href="http://cstrobbe.github.io/AccessibilityResources/css/meiert-qa.css" title="QA stylesheet" />
   <!-- custom 404 page, as explained at https://help.github.com/articles/creating-a-custom-404-page-for-your-github-pages-site/ -->
+  <link rel="index" href="/index.html" /><!-- index rel, listed in HTML5 link type extensions: http://microformats.org/wiki/existing-rel-values#HTML5_link_type_extensions -->
   <meta name="robots" content="noindex, nofollow" />
   <meta name="googlebot" content="noindex, nofollow" />
 </head>
@@ -31,7 +32,7 @@ permalink: /404.html
 
   </main>
 
-  <nav id="sitemap">
+  <section id="sitemap">
     <h2>Site Map</h2>
     <ul>
       <li><a href="./index.html">Home</a></li>
@@ -71,7 +72,7 @@ permalink: /404.html
       </li>
       <!-- @@TODO add "other topics" -->
     </ul>
-  </nav>
+  </section>
 
   <footer>
     <p id="licence"><a rel="license"
