--- a/LICENCE.html
+++ b/LICENCE.html
@@ -1,7 +1,5 @@
-<!DOCTYPE html>
-<html lang="en">
-<!-- See http://creativecommons.org/licenses/by-sa/4.0/legalcode -->
-<!-- Human-readable summary: http://creativecommons.org/licenses/by-sa/4.0/ --> 
+<!DOCTYPE html><html lang="en">
+<!-- See http://creativecommons.org/licenses/by-sa/4.0/legalcode --><!-- Human-readable summary: http://creativecommons.org/licenses/by-sa/4.0/ -->
 <head>
   <title>Creative Commons — Attribution-ShareAlike 4.0 International — CC BY-SA 4.0</title>
   <meta charset="UTF-8" />
@@ -21,6 +19,7 @@
       padding-left: 0;
     }
   </style>
+  <link rel="index" href="index.html" /><!-- index rel, listed in HTML5 link type extensions: http://microformats.org/wiki/existing-rel-values#HTML5_link_type_extensions -->
 </head>
 
 <body>
