Funka: Mobile Guidelines. Henny Swan's blog no longer available.

--- a/MobileAccessibilityResources.html
+++ b/MobileAccessibilityResources.html
@@ -6,6 +6,7 @@
   <link rel="stylesheet" type="text/css" media="screen" href="css/stuttgartbib.css" title="default" />
   <link rel="alternate stylesheet" type="text/css" media="screen" href="css/verdemoderna.css" title="alternative stylesheet (green)" />
   <link rel="alternate stylesheet" type="text/css" media="screen" href="css/meiert-qa.css" title="QA stylesheet" />
+  <link rel="index" href="index.html" /><!-- index rel, listed in HTML5 link type extensions: http://microformats.org/wiki/existing-rel-values#HTML5_link_type_extensions -->
   <meta name="robots" content="noindex, nofollow" />
   <meta name="googlebot" content="noindex, nofollow" />
 </head>
@@ -44,13 +45,10 @@
     <h2>General Resources</h2>
     <h3>Guidelines</h3>
     <ul>
-      <li>Funka Nu: <a
-        href="http://www.funkanu.com/en/Our-approach/Information-web-and-IT/Rules-and-guidelines/Mobile-accessibility-guidelines/">Mobile
-        accessibility guidelines</a>.</li>
-      <li>Henny Swan: <a
-        href="http://www.iheni.com/mobile-accessibility-guidelines/">Resources for
-        Mobile Accessibility Guidelines</a>, Henny Swan's blog, 7 September
-      2011.</li>
+      <li>Funka (formerly Funka Nu):
+        <a href="https://www.funka.com/en/our-assignments/research-and-innovation/archive---research-projects/mobile-guidelines/">Mobile Guidelines</a>:
+        these guidelines were developed in 2012 and can be downloaded in three language versions: English, Spanish and French.
+      </li>
       <li><strong><a
         href="http://www-03.ibm.com/able/accessibility_research_projects/mobile_accessibility_checker.html"><abbr>IBM</abbr>
         AbilityLab Mobile Accessibility Checker</a></strong> (see also: Techworld:
@@ -71,6 +69,10 @@
             title="Task Force">TF</abbr>)</a>.</li>
         </ul>
       </li>
+      <li><del datetime="2019-08-02">Henny Swan: <a
+        href="http://www.iheni.com/mobile-accessibility-guidelines/">Resources for
+        Mobile Accessibility Guidelines</a>, Henny Swan's blog, 7 September
+      2011.</del></li>
     </ul>
 
     <h3 id="testing">Mobile App Testing</h3>
