Funka: Mobile Navigation Guidelines.

--- a/MobileAccessibilityResources.html
+++ b/MobileAccessibilityResources.html
@@ -49,6 +49,11 @@
         <a href="https://www.funka.com/en/our-assignments/research-and-innovation/archive---research-projects/mobile-guidelines/">Mobile Guidelines</a>:
         these guidelines were developed in 2012 and can be downloaded in three language versions: English, Spanish and French.
       </li>
+      <li>Funka (formerly Funka Nu):
+        <a href="https://www.funka.com/en/our-assignments/research-and-innovation/archive---research-projects/mobile-navigation-guidelines/">Mobile Navigation Guidelines</a>:
+        this document is based on customer research that was done between October 2013 and February 2014.
+        <!--@@download-->
+      </li>
       <li><strong><a
         href="http://www-03.ibm.com/able/accessibility_research_projects/mobile_accessibility_checker.html"><abbr>IBM</abbr>
         AbilityLab Mobile Accessibility Checker</a></strong> (see also: Techworld:
