MyHandicap.de: Hilfsmittel.

--- a/assistivetechnology.html
+++ b/assistivetechnology.html
@@ -204,6 +204,10 @@
         <q>software that transforms colors of the computer display into the discriminable colors for various people including people with color vision deficiency, commonly called color blindness</q>.
         The software is available in versions for Microsoft Windows and Mac<abbr>OS</abbr> and is free of charge for personal and non-commercial use.
       </li>
+      <li>
+        <a href="https://www.myhandicap.de/hilfsmittel-behinderung/" hreflang="de" lang="de">Hilfsmittel für Menschen mit Behinderung</a>,
+        <i class="website">MyHandicap.de</i>.
+      </li>
     </ul>
 
   </main>
