javax.accessibility in Java SE 10 docs

--- a/GUIAccessibilityResources.html
+++ b/GUIAccessibilityResources.html
@@ -49,6 +49,10 @@
         in Oracle's Java Tutorials.
       </li>
       <li>
+        <a href="https://docs.oracle.com/javase/10/docs/api/javax/accessibility/package-summary.html">Package javax.accessibility</a>
+        in the Java Platform <abbr>SE</abbr> 10 documentation.
+      </li>
+      <li>
         <a href="https://docs.oracle.com/javase/9/docs/api/javax/accessibility/package-summary.html">Package javax.accessibility</a>
         in the Java Platform <abbr>SE</abbr> 9 documentation.
       </li>
