--- a/GameAccessibilityResources.html
+++ b/GameAccessibilityResources.html
@@ -6,6 +6,7 @@
   <link rel="stylesheet" type="text/css" media="screen" href="css/stuttgartbib.css" title="default" />
   <link rel="alternate stylesheet" type="text/css" media="screen" href="css/verdemoderna.css" title="alternative stylesheet (green)" />
   <link rel="alternate stylesheet" type="text/css" media="screen" href="css/meiert-qa.css" title="QA stylesheet" />
+  <link rel="index" href="index.html" /><!-- index rel, listed in HTML5 link type extensions: http://microformats.org/wiki/existing-rel-values#HTML5_link_type_extensions -->
   <meta name="robots" content="noindex, nofollow" />
   <meta name="googlebot" content="noindex, nofollow" />
 </head>
@@ -56,8 +57,8 @@
             Association (<abbr>IGDA</abbr>).</li>
         </ul>
       </li>
-      <li><a href="http://www.ablegamers.com/">AbleGamers Foundation / AbleGamers
-        Charity</a> (<abbr>USA</abbr>). 
+      <li><a href="https://www.ablegamers.org/">AbleGamers Foundation / AbleGamers
+        Charity</a> (<abbr>USA</abbr>).<!--old URL: www.ablegamers.com-->
         <ul>
           <li><strong><a href="http://www.includification.com/">Includification -
             Actionable Game Accessibility</a></strong>.</li>
