--- a/GameAccessibilityResources.html
+++ b/GameAccessibilityResources.html
@@ -267,6 +267,10 @@
         <a href="https://docs.microsoft.com/en-us/windows/uwp/gaming/accessibility-for-games">Making games accessible</a>,
         <i class="website">Microsoft Dev Center</i>, 11.09.2017; updated 25.10.2018.
       </li>
+      <li>Marshall, Cass:
+        <a href="https://www.polygon.com/2019/2/10/18212897/apex-legends-settings-accessibility-disability">Apex Legends’ accessibility settings are shockingly good</a>,
+        <i class="website">Polygon</i>, 10.02.2019.
+      </li>
     </ul>
 
 
