--- a/LICENCE.html
+++ b/LICENCE.html
@@ -22,7 +22,7 @@
   <link rel="index" href="index.html" /><!-- index rel, listed in HTML5 link type extensions: http://microformats.org/wiki/existing-rel-values#HTML5_link_type_extensions -->
 </head>
 
-<body>
+<body lang="en-US">
   <h1>Creative Commons Attribution-ShareAlike 4.0 International Public License</h1>
 
   <p>By exercising the Licensed Rights (defined below), You accept and agree to be bound by the terms and conditions of this Creative Commons Attribution-ShareAlike 4.0 International Public License ("Public License"). To the extent this Public License may be interpreted as a contract, You are granted the Licensed Rights in consideration of Your acceptance of these terms and conditions, and the Licensor grants You such rights in consideration of benefits the Licensor receives from making the Licensed Material available under these terms and conditions.</p>
