dhvani also supports Oriya.

--- a/tts.html
+++ b/tts.html
@@ -79,8 +79,8 @@
         <br />Licence: <abbr>GNU</abbr> <abbr title="General Public Licence">GPL</abbr> 2.
       </li>
       <li><a href="http://dhvani.sourceforge.net/">dhvani</a> is text-to-speech software
-        designed for Indian languages. It supports, Bengali, Gujarati, Hindi, Kannada,
-        Malayalam, Marathi and a few other ones.
+        designed for Indian languages. It supports Bengali, Gujarati, Hindi, Kannada,
+        Malayalam, Marathi, Oriya and a few other ones.
         The software currently works on <abbr>GNU</abbr>/Linux.
         The project is looking for volunteers to port the software to Microsoft Windows.
         <br />Licence: <a href="http://dhvani.sourceforge.net/license.html"><abbr>GNU</abbr> <abbr title="General Public Licence">GPL</abbr> 2 or later</a>.
