Can I Play That?

--- a/GameAccessibilityResources.html
+++ b/GameAccessibilityResources.html
@@ -69,7 +69,14 @@
         </ul>
       </li>
       <li><strong><a href="http://www.specialeffect.org.uk/">Special Effect: The
-        gamers charity</a></strong> (<abbr>UK</abbr>).</li>
+        gamers charity</a></strong> (<abbr>UK</abbr>).
+      </li>
+      <li><strong><a href="http://www.caniplaythat.com/">Can I Play That?</a></strong>.
+        This website was started in 2018 by Susan Banks and Courtney Craven
+        and aims to provide a platform for stories and conversations
+        about accessibility (or the lack of it) in games.
+        <!--Access key Ctrl + u opens the "Accessibility Meu" (provided by Userway) and thus conflicts with the buil-in browser shortcut for viewing source code.-->
+      </li>
       <li><strong><a
         href="http://www.game-accessibility.com/">Game-Accessibility.com</a></strong>
         (project website by the Accessibility Foundation in the Netherlands). 
