--- a/assistivetechnology.html
+++ b/assistivetechnology.html
@@ -208,6 +208,9 @@
         <a href="https://www.myhandicap.de/hilfsmittel-behinderung/" hreflang="de" lang="de">Hilfsmittel für Menschen mit Behinderung</a>,
         <i class="website">MyHandicap.de</i>.
       </li>
+      <li lang="de">
+        <a href="https://www.rehadat-hilfsmittel.de/de/" hreflang="de">Hilfsmittel</a>.
+      </li>
     </ul>
 
   </main>
