--- a/contentaccessibility.html
+++ b/contentaccessibility.html
@@ -86,10 +86,6 @@
         <i class="website">Web<abbr>AIM</abbr></i>, last updated in July 2016.
       </li>
       <li>
-        <a href="https://webaim.org/techniques/acrobat/"><abbr>PDF</abbr> Accessibility: Defining Acrobat <abbr>PDF</abbr> Accessibility</a>,
-        <i class="website">Web<abbr>AIM</abbr></i>, last updated in July 2014.
-      </li>
-      <li>
         <a href="https://webaim.org/techniques/ooo/">OpenOffice.org Writer</a>,
         <i class="website">Web<abbr>AIM</abbr></i>, last updated in October 2011.
         <br />This document is now dated, especially with more frequent release of LibreOffice.
@@ -124,13 +120,6 @@
         <i class="blog">Microsoft Accessibility Blog</i>, 19.03.2018. Quote:
         <q>We moved the <a href="https://support.office.com/en-us/article/Use-the-Accessibility-Checker-on-your-Windows-desktop-to-find-accessibility-issues-a16f6de0-2f39-4a2b-8bd8-5ad801426c7f">Accessibility Checker</a> to the ribbon and usage increased 5 times.</q>
       </li>
-      <li>Anand B Pillai:
-        <a href="https://in.pycon.org/2010/talks/8-pdf-accessibility-with-python/"><abbr>PDF</abbr> Accessibility with Pytho</a>,
-        <i class="website">PyCon India, Bangalore, September 2010</i>.
-        The conference presetation reports on <abbr>PDF</abbr> accessibility checking code developed within the
-        eGovMon project in Norway.
-        <!--@@download-->
-      </li>
       <li>Thompson, Terrill:
         <a href="http://terrillthompson.com/blog/517">Converting Word to <abbr>PDF</abbr> or <abbr>HTML</abbr>: Options for Accessibility</a>,
         <i class="blog">Terrill Thompson's blog</i>, 30.06.2014.
@@ -150,6 +139,10 @@
         <a href="http://www.pdf-accessible.com/" lang="fr">Accessibilité des documents <abbr>PDF</abbr> et ePub</a>).
         <br />Guidelines for making <abbr>PDF</abbr> documents accessibile with Adobe InDesign;
         you can even download a practice document.
+      </li>
+      <li>
+        <a href="https://webaim.org/techniques/acrobat/"><abbr>PDF</abbr> Accessibility: Defining Acrobat <abbr>PDF</abbr> Accessibility</a>,
+        <i class="website">Web<abbr>AIM</abbr></i>, last updated in July 2014.
       </li>
       <li>
         <a href="https://www.youtube.com/playlist?list=PLmfVOnJxeSEXsEKv2i20nYMHYuFEcl4fO">Metzessible <abbr title="Portable Document Format: Universal Accessibility">PDF/UA</abbr> Series</a>:
@@ -180,6 +173,13 @@
         <a href="https://itextpdf.com/">iText <abbr>PDF</abbr></a>:
         a <abbr>PDF</abbr> generation library for Java and .NET.
         It supports <abbr>PDF XA</abbr> and can convert <abbr>PDF</abbr> to <abbr>HTML</abbr>.
+      </li>
+      <li>Anand B Pillai:
+        <a href="https://in.pycon.org/2010/talks/8-pdf-accessibility-with-python/"><abbr>PDF</abbr> Accessibility with Python</a>,
+        <i class="website">PyCon India, Bangalore, September 2010</i>.
+        The conference presentation reports on <abbr>PDF</abbr> accessibility checking code developed within the
+        eGovMon project in Norway.
+        <!--@@download-->
       </li>
     </ul>
 
