Adobe Acrobat Accessibility

--- a/contentaccessibility.html
+++ b/contentaccessibility.html
@@ -133,6 +133,12 @@
 
     <h3 id="pdf">Portable Document Format (<abbr>PDF</abbr>)</h3>
     <ul>
+      <li>Adobe:
+        <a href="https://www.adobe.com/accessibility/products/acrobat.html">Adobe Acrobat Accessibility</a>.
+      </li>
+      <li>Adobe:
+        <a href="https://www.adobe.com/accessibility/products/acrobat/training.html">Adobe Acrobat Accessibility: Training Resources</a>.
+      </li>
       <li>Accede <abbr>PDF</abbr> Project:
         <a href="http://www.pdf-accessible.com/en/">Accessibility of <abbr>PDF</abbr></a>
         (English translation of
