Latest TalkingArch released October 2017.

--- a/LinuxAccessibilityResources.html
+++ b/LinuxAccessibilityResources.html
@@ -206,6 +206,7 @@
         <q>a respin of the Arch Linux live iso modified to include speech and braille output for blind and visually impaired users</q>.
         <br />TalkingArch is a bootable <abbr>CD</abbr> or <abbr>USB</abbr> image optimised for blind users. 
         The system stars speaking at boot time.
+        The latest release dates from October 2017.
         TalkingArch is not an official release of the Arch Linux project.
         See also
         <a href="https://blog.talkingarch.tk/">The TalkingArch Blog</a>
