U of Washington: Creating Accessible PDF Forms ...

--- a/contentaccessibility.html
+++ b/contentaccessibility.html
@@ -175,6 +175,10 @@
         German blog about <abbr>PDF</abbr> accessibility.
         <!--@@list individual blog posts-->
       </li>
+      <li>University of Washington:
+        <a href="https://www.washington.edu/accessibility/documents/pdf-forms/">Creating Aaccessible <abbr>PDF</abbr> Forms Using Adobe Acrobat Pro</a>
+        (no date).
+      </li>
       <li>
         <a href="https://itextpdf.com/">iText <abbr>PDF</abbr></a>:
         a <abbr>PDF</abbr> generation library for Java and .NET.
@@ -187,6 +191,7 @@
         eGovMon project in Norway.
         <!--@@download-->
       </li>
+      <!-- https://acrobatusers.com/tutorials/filter/search&category=2&channel=tutorials/ -->
     </ul>
 
 
