U of Washington: Fixing Inaccessible PDF ...

--- a/contentaccessibility.html
+++ b/contentaccessibility.html
@@ -176,7 +176,11 @@
         <!--@@list individual blog posts-->
       </li>
       <li>University of Washington:
-        <a href="https://www.washington.edu/accessibility/documents/pdf-forms/">Creating Aaccessible <abbr>PDF</abbr> Forms Using Adobe Acrobat Pro</a>
+        <a href="https://www.washington.edu/accessibility/documents/pdf-forms/">Creating Accessible <abbr>PDF</abbr> Forms Using Adobe Acrobat Pro</a>
+        (no date).
+      </li>
+      <li>University of Washington:
+        <a href="https://www.washington.edu/accessibility/documents/pdf-acrobat/">Fixing Inaccessible <abbr>PDF</abbr>s Using Adobe Acrobat Pro DC</a>
         (no date).
       </li>
       <li>
