--- a/gpii/gpii-for-developers.html
+++ b/gpii/gpii-for-developers.html
@@ -6,6 +6,7 @@
   <link rel="stylesheet" type="text/css" media="screen" href="../css/stuttgartbib.css" title="default" />
   <link rel="alternate stylesheet" type="text/css" media="screen" href="../css/verdemoderna.css" title="alternative stylesheet (green)" />
   <link rel="alternate stylesheet" type="text/css" media="screen" href="../css/meiert-qa.css" title="QA stylesheet" />
+  <link rel="index" href="../index.html" /><!-- index rel, listed in HTML5 link type extensions: http://microformats.org/wiki/existing-rel-values#HTML5_link_type_extensions -->
   <meta name="robots" content="noindex, nofollow" />
   <meta name="googlebot" content="noindex, nofollow" />
 </head>
