HandyLinux.org: domain no longer hosts HandyLinux.

--- a/LinuxAccessibilityResources.html
+++ b/LinuxAccessibilityResources.html
@@ -213,12 +213,12 @@
         and the
         <a href="https://wiki.archlinux.org/index.php/TalkingArch">TalkingArch wiki page</a>.
       </li>
-      <li><a href="https://lescahiersdudebutant.fr/handylinux/" hreflang="fr">HandyLinux</a><!--http://handylinux.org/index-en.html redirects to newer site 08.01.2018 -->
+      <li><a href="https://en.wikipedia.org/wiki/HandyLinux">HandyLinux</a><!--http://handylinux.org/index-en.html redirects to newer site 08.01.2018; https://lescahiersdudebutant.fr/handylinux/ empty on 22.08.2019-->
         was a Debian-based French distribution aimed at beginners, elderly people 
         and anyone who needs simplicity. 
         Version 2, which was released on 
         <a href="http://blog.handylinux.org/article190/handylinux-2-0-est-disponible-au-telechargement">16 May 2015</a>,
-        was based on Debian 8, although it is only available as a 32-bit version. 
+        was based on Debian 8, although it was only available as a 32-bit version.
         It used <a href="http://www.xfce.org/">Xfce</a> as desktop environment
         and included the <a href="https://wiki.gnome.org/Projects/Orca">Orca screen reader</a> 
         (which is part of GNOMEShell), a screen magnifier, an on-screen keyboard 
