Hartley: >Linux Accessibility For The Visually Impaired - For The Record

--- a/LinuxAccessibilityResources.html
+++ b/LinuxAccessibilityResources.html
@@ -181,6 +181,16 @@
         This video reviews features such as Orca (Xfce's file mananger Thunar is not accessible with Orca),
         high contrast (white on black), the whisker menu (the search box is accessible),
       </li>
+      <li>Hartley, Matt:
+        <a href="https://www.youtube.com/watch?v=ra_-WcdT3aM">Linux Accessibility For The Visually Impaired - For The Record</a>
+        (Matt Hartley on YouTube, 22 minutes, 17.09.2018).
+        This video is a reesponse to a question from a visually impaired user who wanted to know whether
+        there is a version of Linux that would allow one to listen to highlighted text and
+        that would allow one to dictate text in English and Spanish.
+        Matt shows one how to install the Festival text-to-speech engine and a few related libraries,
+        and how to adapt certain specific settings.
+        Note that Matt is not an accessibility expert, so the process he presents may not be optimal.
+      </li>
     </ul>
 
     <h2>Specialised Linux Distributions</h2>
