Weissenstein: Computer Hilfsmittel

--- a/assistivetechnology.html
+++ b/assistivetechnology.html
@@ -211,6 +211,10 @@
       <li lang="de">
         <a href="https://www.rehadat-hilfsmittel.de/de/" hreflang="de">Hilfsmittel</a>.
       </li>
+      <li lang="de">
+        <a href="https://www.weissenstein-bs.de/pc-hm.html" hreflang="de">Computer Hilfsmittel</a>,
+        <i class="website">Weißenstein</i>.
+      </li>
     </ul>
 
   </main>
