Kommunikations- und Computerhilfen - Elisabeth Seveke

--- a/assistivetechnology.html
+++ b/assistivetechnology.html
@@ -215,6 +215,9 @@
         <a href="https://www.weissenstein-bs.de/pc-hm.html" hreflang="de">Computer Hilfsmittel</a>,
         <i class="website">Weißenstein</i>.
       </li>
+      <li>
+        <a href="http://www.computer-fuer-behinderte.de/index.htm" hreflang="de" lang="de">Kommunikations- und Computerhilfen &mdash; <abbr>Dr.</abbr> Elisabeth Seveke <abbr>e.K.</abbr></a>.
+      </li>
     </ul>
 
   </main>
