--- a/accessibilityforusers.html
+++ b/accessibilityforusers.html
@@ -184,6 +184,11 @@
         <a href="https://dequeuniversity.com/screenreaders/">Screen Reader Keyboard Shortcuts</a>,
         <i class="website">Deque University</i>.
       </li>
+      <li>
+        <a href="http://www.accessfirefox.org/">Access Firefox</a>:
+        this site <q>was created with the goal of making it a Firefox accessibility web portal for end users</q>.
+        (It is not clear whether this site is still being maintained. It was last updated in 2017.)
+      </li>
     </ul>
   </main>
 
