--- a/personas.html
+++ b/personas.html
@@ -90,6 +90,9 @@
       <li>Whitney Quesenbery:
         <a href="http://rosenfeldmedia.com/a-web-for-everyone/personas-for-accessible-ux/">Personas for Accessible <abbr>UX</abbr></a>,
         <i class="website">Rosenfeld Media</i>, 15 January 2014.
+        <br />See also the blog post
+        <a href="https://rosenfeldmedia.com/a-web-for-everyone/a-wealth-of-personas/">A Wealth of Personas</a>
+        (28.12.2015).
       </li>
       <li>Shawn Lawton Henry:
         <a href="http://www.uiaccess.com/accessucd/personas_eg.html">Example Personas</a>,
