--- a/GameAccessibilityResources.html
+++ b/GameAccessibilityResources.html
@@ -278,6 +278,12 @@
         <a href="https://docs.microsoft.com/en-us/windows/uwp/gaming/accessibility-for-games">Making games accessible</a>,
         <i class="website">Microsoft Dev Center</i>, 11.09.2017; updated 25.10.2018.
       </li>
+      <li>Robberts, Nastassja:
+        <a href="https://glitched.africa/tech/accessible-gaming/"><abbr>US</abbr> Law Affects Accessible Gaming For Disabled People</a>,
+        <i class="website">Glitched Africa</i>, 07.01.2019. Quote:
+        <q>Back in 2010, then-president of the United States of America, Barack Obama, signed the 21st Century Communications and Video Accessibility Act (<abbr>CVAA</abbr>) into law.
+        As of 31 December 2019, the gaming industry is compelled to comply with the <abbr>CVAA</abbr>, after having been able to avoid compliance due to extensions being granted.</q>
+      </li>
       <li>Marshall, Cass:
         <a href="https://www.polygon.com/2019/2/10/18212897/apex-legends-settings-accessibility-disability">Apex Legends’ accessibility settings are shockingly good</a>,
         <i class="website">Polygon</i>, 10.02.2019.
