Accessible Name and Description Computation 1.1

--- a/accessibilityguidelines.html
+++ b/accessibilityguidelines.html
@@ -263,6 +263,10 @@
         </ul>
       </li>
       <li><abbr>W3C</abbr>:
+        <a href="https://www.w3.org/TR/accname-1.1/">Accessible Name and Description Computation 1.1: <abbr>W3C</abbr> Recommendation 18 December 2018</a>.
+        This specification is targeted at user agent developers.
+      </li>
+      <li><abbr>W3C</abbr>:
         <a href="http://www.w3.org/TR/ATAG20/">Authoring Tool Accessibility 
         Guidelines (<abbr>ATAG</abbr>) 2.0</a>:
         guidelines for tools that produce web content, such as 
