--- a/WebAccessibilityTools.html
+++ b/WebAccessibilityTools.html
@@ -122,6 +122,14 @@
         See also the 
         <a href="http://ainspector.github.io/">AInspector Sidebar Documentation</a>.
       </li>
+      <li>
+        <a href="https://achecker.ca/checker/index.php">AChecker</a>:
+        online tool that can check web pages that you submit by entering a <abbr>URL</abbr>,
+        uploading an <abbr>HTML</abbr> file or pasting source code.
+        You need a user account if you want to evaluate a website.
+        <a href="https://github.com/inclusive-design/AChecker">AChecker's source code</a>
+        is available on GitHub under the <abbr>GNU</abbr> <abbr>GPL</abbr> version 2.
+      </li>
       <li>European Internet Inclusion Initiative (<abbr>EIII</abbr>):
         <a href="http://checkers.eiii.eu/"><abbr>EIII</abbr> Page Checker</a>:
         tool where you can enter the <abbr>URL</abbr> of a web page that you want to evaluate.
