More links about the aXe tool.

--- a/WebAccessibilityTools.html
+++ b/WebAccessibilityTools.html
@@ -193,8 +193,26 @@
         <a href="https://www.deque.com/axe/">axe: the Accessibility Engine</a>:
         <!--Old URL: https://www.axe-core.org/-->
         <q>Axe is an open source rules library for accessibility testing</q>.
+        One of its mantras is not generating false positives.
         See <a href="https://github.com/dequelabs/axe-core">axe-core on GitHub</a>
         (Mozilla Public License 2.0).
+        See also:
+        <ul>
+          <li>Dodson, Rob:
+            <a href="https://www.youtube.com/watch?v=jC_7NnRdYb0">Automated testing with aXe -- A11ycasts #15</a>
+            (Google Chrome Developers on YouTube, 12 minutes, 17.03.2017).<!--CC-BY licence-->
+            <br />Note that this tutorial is based on an older version of axe.
+          </li>
+          <li>Sutton, Marcy:
+            <a href="https://www.deque.com/blog/axe-3-0-has-arrived/">Axe 3.0 has arrived — here’s what you need to know</a>,
+            <i class="blog">Deque blog</i>, 21.03.2018.
+          </li>
+          <!--
+          <li>
+            <a href=""></a>
+          </li>
+          -->
+        </ul>
       </li>
       <li>
         <a href="https://github.com/trentmwillis/ember-a11y-testing">Ember A11y Testing</a> (available under the <abbr>MIT</abbr> licence)
