W3C: Making Content Usable for People with Cognitive and Learning Disabilities

--- a/accessibilityguidelines.html
+++ b/accessibilityguidelines.html
@@ -267,6 +267,13 @@
         This specification is targeted at user agent developers.
       </li>
       <li><abbr>W3C</abbr>:
+        <a href="https://www.w3.org/TR/2018/WD-coga-usable-20181211/">Making Content Usable for People with Cognitive and Learning Disabilities: <abbr>W3C</abbr> First Public Working Draft 11 December 2018</a>.
+        This specification is being developed by the
+        <a href="https://www.w3.org/WAI/PF/cognitive-a11y-tf/">Cognitive and Learning Disabilities Accessibility Task Force (Cognitive <abbr title="Accessibility">A11Y</abbr> <abbr>TF</abbr>)</a>.
+        See also the
+        <a href="https://www.w3.org/TR/coga-gap-analysis/">Cognitive Accessibility Roadmap and Gap Analysis</a>.
+      </li>
+      <li><abbr>W3C</abbr>:
         <a href="http://www.w3.org/TR/ATAG20/">Authoring Tool Accessibility 
         Guidelines (<abbr>ATAG</abbr>) 2.0</a>:
         guidelines for tools that produce web content, such as 
