More info about AIspector Sidebar

--- a/WebAccessibilityTools.html
+++ b/WebAccessibilityTools.html
@@ -114,13 +114,18 @@
       </li>
       <li>The
         <a href="https://addons.mozilla.org/en-us/firefox/addon/ainspector-sidebar/">AInspector Sidebar</a>
+        <!--Mozilla Public License, version 2.0-->
         is a Firefox add-on developed by the Accessible <abbr>IT</abbr> Group at the University of Illinois.
-        Like <abbr>FAE</abbr> it evaluate the conformance of web content
+        Like <abbr>FAE</abbr> it evaluates the conformance of web content
         against <abbr>WCAG</abbr> 2.0 Level A or Level AA.
         Like <abbr>FAE</abbr>, it uses the 
         <a href="http://www.openajax.org/member/wiki/Accessibility">OpenAjax Alliance rules and rulesets</a>.
         See also the 
-        <a href="http://ainspector.github.io/">AInspector Sidebar Documentation</a>.
+        <a href="http://ainspector.github.io/">AInspector Sidebar Documentation</a>
+        and the
+        <a href="https://github.com/ainspector/webextensions-firefox"><abbr>A</abbr>Inspector Sidebar source code</a>
+        on GitHub.
+        <!--JavaScript: delayDialog.js, Menu.js: W3C Software License; many JS files don't have a licence. Open Ajax Alliance rules/JS: Apache 2.0-->
       </li>
       <li>
         <a href="https://achecker.ca/checker/index.php">AChecker</a>:
