Accessibility guidelines for UX Designers

--- a/webaccessibilitytechniques.html
+++ b/webaccessibilitytechniques.html
@@ -167,6 +167,10 @@
         <br />Guidance that briefly covers document titles, structure elements (headings, paragraphs, lists),
         link text, text alternatives for images, contrast, multimdia, instructions and readability.
       </li>
+      <li>Kaur, Avinash:
+        <a href="https://uxdesign.cc/accessibility-guidelines-for-a-ux-designer-c3ba775539be">Accessibility guidelines for <abbr>UX</abbr> Designers</a>,
+        <i class="blog"><abbr>UX</abbr> Collective on Medium</i>, 18.12.2018.
+      </li>
     </ul>
 
     <h2>Support in Assistive Technolgies</h2>
