Updates on various courses

--- a/courses.html
+++ b/courses.html
@@ -59,9 +59,9 @@
         is a five-week course created by the <a href="http://gpii.eu/moocap/"><abbr>MOOC</abbr> Accessibility Partnership</a> 
         and that has run three times on FutureLearn.
         The first run of the course started on 17 October 2016 and ended on 20 November 2016. 
-        The second run started on 6 February 2017 and ended on 12 March 2017.
-        The third run started on 9 October 2017.
-        A new run has not been scheduled at the moment.
+        (The course has had three more runs since then: from 6 February 2017 till 12 March 2017,
+        from 9 October 2017 till 12 November 2017 and from 8 October 2018 till 11 November 2018.)
+        A new run has not been scheduled at the moment but people who are interested can add the course to their wishlist.
         <br />The content on which the course is based is available as a collection of 
         Open Educational Resources (<abbr>OERs</abbr>). You can find the list on the
         <a href="http://gpii.eu/moocap/?p=793"><abbr>MOOCAP</abbr> website</a>
@@ -72,33 +72,22 @@
         <a href="http://gpii.eu/moocap/?page_id=655">further courses</a> in 2017.
       </li>
       <li>
-        <a href="https://www.fun-mooc.fr/courses/course-v1:inria+41012+session02/about" lang="fr">Accessibilité Numérique</a>
-        is a <abbr>MOOC</abbr> created by the <span lang="fr">Université de Bordeaux</span> in France.
-        The <a href="https://www.fun-mooc.fr/courses/inria/41012/session01/about" lang="fr">first session</a> 
-        of the course started on 7 November 2016 and ran for five weeks.
-        The second run of the course started on 9 May and ended on 17 June 2017. The course requires 2 to 3 hours of study per week.
-        A new run of the course has not been scheduled at the moment.
-        (See also the 
-        <a href="http://www.echosciences-grenoble.fr/annonces/mooc-accessibilite-numerique-bientot-disponible-sur-la-plateforme-france-universite-numerique" lang="fr" hreflang="fr">MOOC « Accessibilité Numérique » bientôt disponible sur la plateforme France Université Numérique</a>
-        on <span lang="fr">Echosciences Grenoble</span>.)
-      </li>
-      <li>
         <a href="https://www.edx.org/course/information-communication-technology-ict-ict100x">Information and Communication Technology (<abbr>ICT</abbr>) Accessibility</a>
         is a 6-week course by the Georgia Institute of Technology (Georgia Tech) hosted on edX. The course requires 2 to 4 hours of study per week.
         The latest session started on 29.02.2016; the course is now available as a self-paced course.
       </li>
-      <!-- 
+      <!--
       <li>
         <a href="https://www.coursera.org/course/digitalaccessibility">Information and Communication Technology (<abbr>ICT</abbr>) Accessibility</a>
         was the same course as above but hosted on Coursera. This course is no longer available on Coursera.
       </li>
-      -->
       <li>
         <a href="https://teamtreehouse.com/library/accessibility">Accessibility</a>
-        by Nick Pettit is a course hosted on Treehouse.
-        It is described as a <q>101-minute HTML Course</q>.
+        by Nick Pettit was a course hosted on Treehouse.
+        It was described as a <q>101-minute <abbr>HTML</abbr> Course</q>.
         (Access to Treehouse requires a monthly subscription.)
       </li>
+      -->
     </ul>
 
     <h3>Web Accessibility</h3>
@@ -110,19 +99,20 @@
       <li>
         <a href="https://de.ryerson.ca/wa/advanced/">Advanced Web Accessibility Strategies and Techniques</a>
         is a four-week course developed by the The Chang School, Ryerson University.
-        It requires five hours of study per week and starts in September 2018.
+        It requires five hours of study per week. The first session started in September 2018.
+        A start date for the next run still needs to be determined.
       </li>
-      <li><a href="http://centreforinclusivedesign.org/professional-certificate-web-accessibility/">Professional Certificate in Web Accessibility</a>
+      <li><del datetime="2019-01-05"><a href="http://centreforinclusivedesign.org/professional-certificate-web-accessibility/">Professional Certificate in Web Accessibility</a>
         is a six-week course by the Centre for Inclusive Design (Australia). The course ran from 26 March to 4 May 2018
-        and costs <abbr title="Australian dollar">AUD</abbr> $2,400.
+        and costs <abbr title="Australian dollar">AUD</abbr> $2,400.</del>
       </li>
       <li>
         <a href="https://www.edx.org/course/web-design-best-practices-inclusive-microsoft-dev240x">Web Design Best Practices: An Inclusive Approach</a>
         by Microsoft is a self-paced course hosted on edX.
         The course consists of 5 modules, each requiring 3–4 hours of effort.
-        The first run started on 31 January 2018.
-        It is part of a &ldquo;Professional Certificate Program&rdquo;. 
-        The next run starts on 1 March 2018.
+        The first run started on 31 January 2018. The next run started on 1 March 2018.
+        The course is currently archived.
+        It is part of a &ldquo;Professional Certificate Program&rdquo;.
       </li>
       <li>
         <a href="https://www.edx.org/course/introduction-web-accessibility-microsoft-dev240x">Introduction to Web Accessibility</a>
