Update on Basics of Inclusive Design for Online Education

--- a/courses.html
+++ b/courses.html
@@ -173,7 +173,8 @@
       <li>
         <a href="https://www.coursera.org/learn/inclusive-design">Basics of Inclusive Design for Online Education</a>
         is a five-week course by the University of Colorado Boulder hosted on Coursera.
-        The first run starts on 4 June 2018.
+        The course requires approximately 13 hours to complete (or a bit more than three hours per week).
+        The first run started on 4 June 2018.
       </li>
       <li>
         <a href="http://accessibility.mrooms.net/">The Accessibility <abbr>MOOC</abbr>: Inclusive Online Course Design</a>
