fun-mooc: Accessibilité Numérique: new session

--- a/courses.html
+++ b/courses.html
@@ -55,6 +55,18 @@
     <p>This sections lists courses that provide a general introduction to <abbr>ICT</abbr> accessibility.</p>
     <ul>
       <li>
+        <a href="https://www.fun-mooc.fr/courses/course-v1:inria+41012+session02/about" hreflang="fr" lang="fr">Accessibilité Numérique</a>
+        is a <abbr>MOOC</abbr> created by the <span lang="fr">Université de Bordeaux</span> in France.
+        The <a href="https://www.fun-mooc.fr/courses/inria/41012/session01/about" hreflang="fr" lang="fr">first session</a>
+        of the course started on 7 November 2016 and ran for five weeks.
+        The second run of the course started on 9 May and ended on 17 June 2017. The course requires 2 to 3 hours of study per week.
+        The <a href="https://www.fun-mooc.fr/courses/course-v1:inria+41012+self_paced/about" hreflang="fr">fourth session of <span lang="fr">Accessibilité Numérique</span></a>
+        is open until 20 December 2019.
+        (See also the
+        <a href="http://www.echosciences-grenoble.fr/annonces/mooc-accessibilite-numerique-bientot-disponible-sur-la-plateforme-france-universite-numerique" lang="fr" hreflang="fr">MOOC « Accessibilité Numérique » bientôt disponible sur la plateforme France Université Numérique</a>
+        on <span lang="fr">Echosciences Grenoble</span>.)
+      </li>
+      <li>
         <a href="https://www.futurelearn.com/courses/digital-accessibility">Digital Accessibility: Enabling Participation in the Information Society</a>
         is a five-week course created by the <a href="http://gpii.eu/moocap/"><abbr>MOOC</abbr> Accessibility Partnership</a> 
         and that has run three times on FutureLearn.
