U of Illinois: An Introduction to Accessibility and Inclusive Design

--- a/courses.html
+++ b/courses.html
@@ -67,6 +67,11 @@
         on <span lang="fr">Echosciences Grenoble</span>.)
       </li>
       <li>
+        <a href="https://www.coursera.org/learn/accessibility">An Introduction to Accessibility and Inclusive Design</a>
+        is a <abbr>MOOC</abbr> created by the University of Illinois at Urbana-Champaign.
+        The course is hosted on Coursera and takes approximately 18 hours to complete.
+      </li>
+      <li>
         <a href="https://www.futurelearn.com/courses/digital-accessibility">Digital Accessibility: Enabling Participation in the Information Society</a>
         is a five-week course created by the <a href="http://gpii.eu/moocap/"><abbr>MOOC</abbr> Accessibility Partnership</a> 
         and that has run three times on FutureLearn.
